# august_adventure

./: .gitignore  AGENTS.md  DECISIONS.md  README.md  pyproject.toml
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: august_playtest_automation.md  github_setup.md  opencode_dev_loop.md  playtest_rubric.md
game/: __init__.py  cli.py  engine.py  game_description.md  game_rules.md  parser.py  playtest.py  world.py
ops/august/: august-playtest.env.example  august-playtest.service  august-playtest.timer  configure_picoclaw_cron.py  consultant_roles.md  game_profile.json  install_on_august.sh  run_from_picoclaw.sh  runner.py
ops/august/picoclaw/: README.md
ops/august/picoclaw/workspaces/agency/: AGENT.md
ops/august/picoclaw/workspaces/narrative/: AGENT.md
ops/august/picoclaw/workspaces/orchestrator/: AGENT.md
ops/august/picoclaw/workspaces/publisher/: AGENT.md
ops/august/picoclaw/workspaces/puzzle/: AGENT.md
ops/august/picoclaw/workspaces/qa/: AGENT.md
ops/august/roles/: agency.md  narrative.md  publisher.md  puzzle.md  qa.md  synthesis.md
scripts/: playthrough_smoke.py
tests/: test_engine.py  test_parser.py  test_playthrough.py
