[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "august-adventure"
version = "0.1.0"
description = "A classic-style text adventure used for multi-agent development loops."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
august-adventure = "game.cli:main"

[tool.setuptools.packages.find]
include = ["game*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
